--- a/.eslintrc
+++ b/.eslintrc
@@ -23,3 +23,4 @@ rules:
   eslint-comments/no-unused-enable: 2
   react/prefer-stateless-function: 0
   react/jsx-one-expression-per-line: 0
+  react/require-default-props: 0
