--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "codemirror": "^5.39.2",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-codemirror2": "^5.1.0",
     "react-dom": "^16.4.2",
     "react-markdown": "^3.4.1",
     "react-scripts": "1.1.4",
-    "react-split-pane": "^0.1.82",
-    "prop-types": "^15.6.2"
+    "react-split-pane": "^0.1.82"
   },
   "scripts": {
     "start": "react-scripts start",
