--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.4.2",
     "react-markdown": "^3.4.1",
     "react-scripts": "1.1.4",
-    "react-split-pane": "^0.1.82"
+    "react-split-pane": "^0.1.82",
+    "react-tabs": "^2.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
