--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "private": true,
   "dependencies": {
     "codemirror": "^5.39.2",
+    "emoji-dictionary": "^1.0.9",
+    "history": "^4.7.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-codemirror2": "^5.1.0",
     "react-dom": "^16.4.2",
     "react-markdown": "^3.4.1",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "react-split-pane": "^0.1.82",
-    "react-tabs": "^2.2.2"
+    "react-tabs": "^2.2.2",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
+    "reselect": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
