--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
+    "remark": "^9.0.0",
+    "remark-html-emoji-image": "^1.0.0",
+    "remark-react": "^4.0.3",
+    "remark-text-to-image": "ganezasan/remark-text-to-image",
+    "remark-toc": "^5.0.0",
     "reselect": "^3.0.1"
   },
   "scripts": {
