--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "codemirror": "^5.39.2",
     "emoji-dictionary": "^1.0.9",
     "history": "^4.7.2",
